--- a/urbanstory/pages/scss/mixin.html
+++ b/urbanstory/pages/scss/mixin.html
@@ -3,7 +3,7 @@
 		<h1>@mixin</h1>
 	</section>
 	<section>
-		<pre><code>// flexbox
+		<pre class="display-on"><code>// flexbox
 
 @mixin flexbox {
   display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
