--- a/urbanstory/pages/scss/variables.html
+++ b/urbanstory/pages/scss/variables.html
@@ -3,7 +3,7 @@
 		<h1>Variables</h1>
 	</section>
 	<section>
-		<pre><code>// Color variables
+		<pre class="display-on"><code>// Color variables
 
 $c-firm-1: #011148;
 $c-firm-2: darken($c-firm-1, 5); // #010b2f
