--- a/urbanstory/pages/elements/ats-header.html
+++ b/urbanstory/pages/elements/ats-header.html
@@ -45,14 +45,14 @@
     </header>
   </section>
 
-  <section class="code-preview">
+  <section class="code-preview has-tab">
 		<div class="card uh-tab">
 			<nav class="uh-tab-nav">
 				<a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
 				<a  class="nav-item nav-fit-content" href="#sass" id="sass-tab">SASS</a>
 			</nav>
 		</div>
-    <pre class="code-snippet display-on" id="html"><code>&lt;header class=&quot;card-header flex&quot;&gt;
+    <pre class="code-snippet" id="html"><code>&lt;header class=&quot;card-header flex&quot;&gt;
         &lt;a href=&quot;&quot;&gt;&lt;img class=&quot;ats-logo&quot; src=&quot;https://winter-cdn.urbanhire.com/img/logo.svg&quot; alt=&quot;Urbanhire&quot;&gt;&lt;/a&gt;
         &lt;nav class=&quot;ats-nav-content&quot;&gt;
             &lt;div class=&quot;left-side&quot;&gt;
@@ -92,7 +92,7 @@
             &lt;/div&gt;
         &lt;/nav&gt;
     &lt;/header&gt;</code></pre>
-    <pre class="code-snippet" id="sass"><code>
+    <pre class="code-snippet display-off" id="sass"><code>
 .card-header {
   background: $c-white;
   height: $ats-header-height;
