--- a/urbanstory/pages/cards/card.html
+++ b/urbanstory/pages/cards/card.html
@@ -42,14 +42,14 @@
 			</tbody>
 		</table>
 	</section>
-	<section class="code-preview">
+	<section class="code-preview has-tab">
 		<div class="card uh-tab">
 			<nav class="uh-tab-nav">
 				<a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
 				<a  class="nav-item nav-fit-content" href="#sass" id="sass-tab">SASS</a>
 			</nav>
 		</div>
-		<pre  class="code-snippet display-on" id="html"><code>&lt;div class=&quot;row&quot;&gt;
+		<pre  class="code-snippet" id="html"><code>&lt;div class=&quot;row&quot;&gt;
 	&lt;div class=&quot;col-xs-4&quot;&gt;
 		&lt;div class=&quot;card card-base&quot;&gt;Card (default)&lt;/div&gt;
 	&lt;/div&gt;
@@ -62,7 +62,7 @@
 		&lt;div class=&quot;card depth-2 card-base&quot;&gt;Card depth-2&lt;/div&gt;
 	&lt;/div&gt;
 &lt;/div&gt;</code></pre>
-		<pre class="code-snippet" id="sass"><code>
+		<pre class="code-snippet display-off" id="sass"><code>
 .card {
 	background: #ffffff;
 	@include radius;
