--- a/urbanstory/pages/cards/searchbar.html
+++ b/urbanstory/pages/cards/searchbar.html
@@ -8,19 +8,19 @@
 			<div class="dropdown padd-l">All Departments <i class="icon-caret-down"></i></div>
 			<button class="btn btn-large btn-firm">SEARCH</button>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html"><code>&lt;div class=&quot;card flex search-bar&quot;&gt;
+			<pre class="code-snippet" id="html"><code>&lt;div class=&quot;card flex search-bar&quot;&gt;
 	&lt;input type=&quot;text&quot; placeholder=&quot;Search 2.801 employee...&quot;&gt;
 	&lt;div class=&quot;dropdown padd-l&quot;&gt;All Departments &lt;i class=&quot;icon-caret-down&quot;&gt;&lt;/i&gt;&lt;/div&gt;
 	&lt;button class=&quot;btn btn-large btn-firm&quot;&gt;SEARCH&lt;/button&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass"><code>
+			<pre class="code-snippet display-off" id="sass"><code>
 .flex {
 	@include flexbox;
 }
