--- a/urbanstory/pages/forms/checkbox.html
+++ b/urbanstory/pages/forms/checkbox.html
@@ -33,14 +33,14 @@
 				<span class="checkmark"></span>
 			</label>
         </div>
-        <section class="code-preview">
+        <section class="code-preview has-tab">
             <div class="card uh-tab">
                 <nav class="uh-tab-nav">
                     <a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
                     <a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
                 </nav>
             </div>
-		    <pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;uh-input&quot;&gt;
+		    <pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;uh-input&quot;&gt;
     &lt;label class=&quot;container-checkbox&quot;&gt;
         Urbanhire
         &lt;input type=&quot;checkbox&quot; name=&quot;&quot;&gt;
@@ -68,7 +68,7 @@
         &lt;span class=&quot;checkmark&quot;&gt;&lt;/span&gt;
     &lt;/label&gt;
 &lt;/div&gt;</code></pre>
-            <pre class="code-snippet" id="sass-1"><code>.uh-input {
+            <pre class="code-snippet display-off" id="sass-1"><code>.uh-input {
         margin: $gutter-l 0px;
         input {
             padding: 12px 20px;
@@ -208,14 +208,14 @@
 				<span class="checkmark"></span>
 			</label>
         </div>
-        <section class="code-preview">
+        <section class="code-preview has-tab">
             <div class="card uh-tab">
                 <nav class="uh-tab-nav">
                     <a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
                     <a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
                 </nav>
             </div>
-		    <pre class="code-snippet display-on" id="html-2"><code>&lt;div class=&quot;uh-input&quot;&gt;
+		    <pre class="code-snippet" id="html-2"><code>&lt;div class=&quot;uh-input&quot;&gt;
     &lt;label class=&quot;container-radio&quot;&gt;
         Urbanhire
         &lt;input type=&quot;radio&quot; name=&quot;&quot;&gt;
@@ -236,7 +236,7 @@
         &lt;span class=&quot;checkmark&quot;&gt;&lt;/span&gt;
     &lt;/label&gt;
 &lt;/div&gt;</code></pre>
-		    <pre class="code-snippet" id="sass-2"><code>.uh-input {
+		    <pre class="code-snippet display-off" id="sass-2"><code>.uh-input {
     margin: $gutter-l 0px;
     input {
         padding: 12px 20px;
