--- a/urbanstory/pages/forms/select.html
+++ b/urbanstory/pages/forms/select.html
@@ -13,14 +13,14 @@
 				<option>Option 5</option>
 			</select>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;input-form&quot;&gt;
+			<pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;input-form&quot;&gt;
     &lt;select&gt;
         &lt;option&gt;Option 1&lt;/option&gt;
         &lt;option&gt;Option 2&lt;/option&gt;
@@ -29,7 +29,7 @@
         &lt;option&gt;Option 5&lt;/option&gt;
     &lt;/select&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-1"><code>
+			<pre class="code-snippet display-off" id="sass-1"><code>
 // forms
 textarea,
 input[type="text"],
@@ -173,14 +173,14 @@ select {
 				<option>Option 5</option>
 			</select>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-2"><code>&lt;div class=&quot;input-form width-auto&quot;&gt;
+			<pre class="code-snippet" id="html-2"><code>&lt;div class=&quot;input-form width-auto&quot;&gt;
     &lt;select&gt;
         &lt;option&gt;Option 1&lt;/option&gt;
         &lt;option&gt;Option 2&lt;/option&gt;
@@ -189,7 +189,7 @@ select {
         &lt;option&gt;Option 5&lt;/option&gt;
     &lt;/select&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-2"><code>
+			<pre class="code-snippet display-off" id="sass-2"><code>
 // forms
 textarea,
 input[type="text"],
@@ -333,14 +333,14 @@ select {
 				<option>Option 5</option>
 			</select>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-3" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-3" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-3"><code>&lt;div class=&quot;input-form&quot;&gt;
+			<pre class="code-snippet" id="html-3"><code>&lt;div class=&quot;input-form&quot;&gt;
     &lt;select disabled&gt;
         &lt;option&gt;Option 1&lt;/option&gt;
         &lt;option&gt;Option 2&lt;/option&gt;
@@ -349,7 +349,7 @@ select {
         &lt;option&gt;Option 5&lt;/option&gt;
     &lt;/select&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-3"><code>
+			<pre class="code-snippet display-off" id="sass-3"><code>
 		// forms
 		textarea,
 		input[type="text"],
@@ -506,14 +506,14 @@ select {
 			</select>
 			<label>You haven't select this option</label>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-4" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-4" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-4"><code>&lt;div class=&quot;input-form&quot;&gt;
+			<pre class="code-snippet" id="html-4"><code>&lt;div class=&quot;input-form&quot;&gt;
     &lt;label&gt;Choose selection&lt;/label&gt;
     &lt;select&gt;
         &lt;option&gt;Option 1&lt;/option&gt;
@@ -536,7 +536,7 @@ select {
     &lt;/select&gt;
     &lt;label&gt;You haven't select this option&lt;/label&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-4"><code>
+			<pre class="code-snippet display-off" id="sass-4"><code>
 // forms
 textarea,
 input[type="text"],
