--- a/urbanstory/pages/forms/textarea.html
+++ b/urbanstory/pages/forms/textarea.html
@@ -30,14 +30,14 @@
 			<textarea placeholder="textarea"></textarea>
 			<label>Success message</label>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html"><code>&lt;div class=&quot;input-form width-auto&quot;&gt;
+			<pre class="code-snippet" id="html"><code>&lt;div class=&quot;input-form width-auto&quot;&gt;
     &lt;textarea placeholder=&quot;textarea&quot;&gt;&lt;/textarea&gt;
 &lt;/div&gt;
 
@@ -69,7 +69,7 @@
     &lt;textarea placeholder=&quot;textarea&quot;&gt;&lt;/textarea&gt;
     &lt;label&gt;Success message&lt;/label&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass"><code>
+			<pre class="code-snippet display-off" id="sass"><code>
 // forms
 textarea,
 input[type="text"],
