--- a/urbanstory/pages/grid/grid.html
+++ b/urbanstory/pages/grid/grid.html
@@ -413,14 +413,14 @@
             <div class="box"></div>
         </div>
     </div>
-    <section class="code-preview">
+    <section class="code-preview has-tab">
         <div class="card uh-tab">
             <nav class="uh-tab-nav">
                 <a  class="nav-item nav-fit-content active" href="#html-0" id="html-tab">HTML</a>
                 <a  class="nav-item nav-fit-content" href="#sass-0" id="sass-tab">SASS</a>
             </nav>
         </div>
-        <pre class="code-snippet display-on" id="html-0"><code>&lt;div class="row top-xs">
+        <pre class="code-snippet" id="html-0"><code>&lt;div class="row top-xs">
     &lt;div class="col-xs-6">
         &lt;div class="box">
             top
@@ -428,7 +428,7 @@
     &lt;/div>
 &lt;/div>
         </code></pre>
-        <pre class="code-snippet" id="sass-0"><code>
+        <pre class="code-snippet display-off" id="sass-0"><code>
 .top-xs {
     -ms-flex-align: start;
     -webkit-box-align: start;
@@ -445,14 +445,14 @@
             <div class="box"></div>
         </div>
     </div>
-    <section class="code-preview">
+    <section class="code-preview has-tab">
         <div class="card uh-tab">
             <nav class="uh-tab-nav">
                 <a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
                 <a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
             </nav>
         </div>
-        <pre class="code-snippet display-on" id="html-1"><code>&lt;div class="row middle-xs">
+        <pre class="code-snippet" id="html-1"><code>&lt;div class="row middle-xs">
     &lt;div class="col-xs-6">
         &lt;div class="box">
             center
@@ -460,7 +460,7 @@
     &lt;/div>
 &lt;/div>
         </code></pre>
-        <pre class="code-snippet" id="sass-1"><code>
+        <pre class="code-snippet display-off" id="sass-1"><code>
 .middle-xs {
     -ms-flex-align: center;
     -webkit-box-align: center;
@@ -477,14 +477,14 @@
             <div class="box"></div>
         </div>
     </div>
-    <section class="code-preview">
+    <section class="code-preview has-tab">
         <div class="card uh-tab">
             <nav class="uh-tab-nav">
                 <a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
                 <a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
             </nav>
         </div>
-        <pre class="code-snippet display-on" id="html-2"><code>&lt;div class="row bottom-xs">
+        <pre class="code-snippet" id="html-2"><code>&lt;div class="row bottom-xs">
     &lt;div class="col-xs-6">
         &lt;div class="box">
             bottom
@@ -492,7 +492,7 @@
     &lt;/div>
 &lt;/div>
         </code></pre>
-        <pre class="code-snippet" id="sass-2"><code>
+        <pre class="code-snippet display-off" id="sass-2"><code>
 .bottom-xs {
     -ms-flex-align: end;
     -webkit-box-align: end;
@@ -523,14 +523,14 @@
             </div>
         </div>
     </div>
-    <section class="code-preview">
+    <section class="code-preview has-tab">
         <div class="card uh-tab">
             <nav class="uh-tab-nav">
                 <a  class="nav-item nav-fit-content active" href="#html-3" id="html-tab">HTML</a>
                 <a  class="nav-item nav-fit-content" href="#sass-3" id="sass-tab">SASS</a>
             </nav>
         </div>
-        <pre class="code-snippet display-on" id="html-3"><code>&lt;div class="row around-xs">
+        <pre class="code-snippet" id="html-3"><code>&lt;div class="row around-xs">
     &lt;div class="col-xs-2">
         &lt;div class="box">
             around
@@ -548,7 +548,7 @@
     &lt;/div>
 &lt;/div>
         </code></pre>
-        <pre class="code-snippet" id="sass-3"><code>
+        <pre class="code-snippet display-off" id="sass-3"><code>
 .around-xs {
     -ms-flex-pack: distribute;
     justify-content: space-around;
@@ -573,14 +573,14 @@
             </div>
         </div>
     </div>
-    <section class="code-preview">
+    <section class="code-preview has-tab">
         <div class="card uh-tab">
             <nav class="uh-tab-nav">
                 <a  class="nav-item nav-fit-content active" href="#html-4" id="html-tab">HTML</a>
                 <a  class="nav-item nav-fit-content" href="#sass-4" id="sass-tab">SASS</a>
             </nav>
         </div>
-        <pre class="code-snippet display-on" id="html-4"><code>&lt;div class="row between-xs">
+        <pre class="code-snippet" id="html-4"><code>&lt;div class="row between-xs">
     &lt;div class="col-xs-2">
         &lt;div class="box">
             between
@@ -598,7 +598,7 @@
     &lt;/div>
 &lt;/div>
         </code></pre>
-        <pre class="code-snippet" id="sass-4"><code>
+        <pre class="code-snippet display-off" id="sass-4"><code>
 .between-xs {
     -ms-flex-pack: justify;
     -webkit-box-pack: justify;
@@ -638,14 +638,14 @@
             </div>
         </div>
     </div>
-    <section class="code-preview">
+    <section class="code-preview has-tab">
         <div class="card uh-tab">
             <nav class="uh-tab-nav">
                 <a  class="nav-item nav-fit-content active" href="#html-5" id="html-tab">HTML</a>
                 <a  class="nav-item nav-fit-content" href="#sass-5" id="sass-tab">SASS</a>
             </nav>
         </div>
-        <pre class="code-snippet display-on" id="html-5"><code>&lt;div class="row">
+        <pre class="code-snippet" id="html-5"><code>&lt;div class="row">
     &lt;div class="col-xs-2">
         &lt;div class="box">
             1
@@ -663,7 +663,7 @@
     &lt;/div>
 &lt;/div>
         </code></pre>
-        <pre class="code-snippet" id="sass-5"><code>
+        <pre class="code-snippet display-off" id="sass-5"><code>
 .first-xs {
     -ms-flex-order: -1;
     -webkit-box-ordinal-group: 0;
@@ -698,14 +698,14 @@
             </div>
         </div>
     </div>
-    <section class="code-preview">
+    <section class="code-preview has-tab">
         <div class="card uh-tab">
             <nav class="uh-tab-nav">
                 <a  class="nav-item nav-fit-content active" href="#html-6" id="html-tab">HTML</a>
                 <a  class="nav-item nav-fit-content" href="#sass-6" id="sass-tab">SASS</a>
             </nav>
         </div>
-        <pre class="code-snippet display-on" id="html-6"><code>&lt;div class="row">
+        <pre class="code-snippet" id="html-6"><code>&lt;div class="row">
     &lt;div class="col-xs-2 last-xs">
         &lt;div class="box">
             1
@@ -723,7 +723,7 @@
     &lt;/div>
 &lt;/div>
         </code></pre>
-        <pre class="code-snippet" id="sass-6"><code>
+        <pre class="code-snippet display-off" id="sass-6"><code>
 .last-xs {
     -ms-flex-order: 1;
     -webkit-box-ordinal-group: 2;
@@ -762,14 +762,14 @@
             </div>
         </div>
     </div>
-    <section class="code-preview">
+    <section class="code-preview has-tab">
         <div class="card uh-tab">
             <nav class="uh-tab-nav">
                 <a  class="nav-item nav-fit-content active" href="#html-7" id="html-tab">HTML</a>
                 <a  class="nav-item nav-fit-content" href="#sass-7" id="sass-tab">SASS</a>
             </nav>
         </div>
-        <pre class="code-snippet display-on" id="html-7"><code>&lt;div class=&quot;row reverse&quot;&gt;
+        <pre class="code-snippet" id="html-7"><code>&lt;div class=&quot;row reverse&quot;&gt;
     &lt;div class=&quot;col-xs-2&quot;&gt;
         &lt;div class=&quot;box&quot;&gt;
             1
@@ -787,7 +787,7 @@
     &lt;/div&gt;
 &lt;/div&gt;
         </code></pre>
-        <pre class="code-snippet" id="sass-7"><code>
+        <pre class="code-snippet display-off" id="sass-7"><code>
 .row.reverse {
     -ms-flex-direction: row-reverse;
     -webkit-box-orient: horizontal;
