--- a/urbanstory/pages/cards/samples.html
+++ b/urbanstory/pages/cards/samples.html
@@ -17,5 +17,15 @@
             800px"
      src="https://cldup.com/PEvWCcCfFC.png" alt="Elva dressed as a fairy">
 		</figure> -->
+		<section class="code-preview has-tab">
+				<div class="card uh-tab">
+					<nav class="uh-tab-nav">
+						<a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
+					</nav>
+				</div>
+				<pre  class="code-snippet" id="html"><code>&lt;figure class=&quot;uh-img-showcase&quot;&gt;
+	&lt;img src=&quot;../../src/img/landing/img-large-preassessment.png&quot;&gt;
+&lt;/figure&gt;</code></pre>
+			</section>
 	</section>
 </div>
