--- a/urbanstory/pages/collaterals/productshowcase.html
+++ b/urbanstory/pages/collaterals/productshowcase.html
@@ -38,5 +38,38 @@
                 </figure>
             </div>
         </div>
+        <section class="code-preview has-tab">
+            <div class="card uh-tab">
+                <nav class="uh-tab-nav">
+                    <a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
+                </nav>
+            </div>
+            <pre  class="code-snippet" id="html"><code>&lt;div class=&quot;row&quot;&gt;
+    &lt;div class=&quot;col-xs-6 padd-m-vertical&quot;&gt;
+        &lt;figure&gt;
+            &lt;img class=&quot;img-wrapper&quot; src=&quot;../../src/img/productshowcase/product_showcase.jpg&quot;&gt;
+            &lt;figcaption&gt;Product showcase&lt;/figcaption&gt;
+        &lt;/figure&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;col-xs-6 padd-m-vertical&quot;&gt;
+        &lt;figure&gt;
+            &lt;img class=&quot;img-wrapper&quot; src=&quot;../../src/img/productshowcase/in_app_online_assessments.jpg&quot;&gt;
+            &lt;figcaption&gt;In app online assessments&lt;/figcaption&gt;
+        &lt;/figure&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;col-xs-6 padd-m-vertical&quot;&gt;
+        &lt;figure&gt;
+            &lt;img class=&quot;img-wrapper&quot; src=&quot;../../src/img/productshowcase/employee_referral_system.jpg&quot;&gt;
+            &lt;figcaption&gt;Employee referral system&lt;/figcaption&gt;
+        &lt;/figure&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;col-xs-6 padd-m-vertical&quot;&gt;
+        &lt;figure&gt;
+            &lt;img class=&quot;img-wrapper&quot; src=&quot;../../src/img/productshowcase/ats.jpg&quot;&gt;
+            &lt;figcaption&gt;Applicant tracking system&lt;/figcaption&gt;
+        &lt;/figure&gt;
+    &lt;/div&gt;
+&lt;/div&gt;</code></pre>
+        </section>
     </section>
 </div>
