--- a/urbanstory/pages/grid/grid.html
+++ b/urbanstory/pages/grid/grid.html
@@ -131,7 +131,7 @@
                 <a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
             </nav>
         </div>
-        <pre class="code-snippet display-on" id="html"><code>&lt;div class="row">
+        <pre class="code-snippet" id="html"><code>&lt;div class="row">
     &lt;div class="col-xs-12">
         &lt;div class="box">12&lt;/div>
     &lt;/div>
@@ -331,14 +331,22 @@
                 </div>
             </div>
         </div>
-    </div><pre class="code-snippet display-on" id="html"><code>&lt;div class="row start-xs">
+    </div>
+    <section class="code-preview">
+        <div class="card uh-tab">
+            <nav class="uh-tab-nav">
+                <a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
+            </nav>
+        </div>
+        <pre class="code-snippet" id="html"><code>&lt;div class="row start-xs">
     &lt;div class="col-xs-6">
         &lt;div class="box">
             start
         &lt;/div>
     &lt;/div>
 &lt;/div>
-</code></pre>
+        </code></pre>
+    </section>
     <h4><code>.center-</code></h4>
     <div class="row">
         <div class="col-xs-12">
@@ -350,14 +358,22 @@
                 </div>
             </div>
         </div>
-    </div><pre class="code-snippet display-on" id="html"><code>&lt;div class="row center-xs">
+    </div>
+    <section class="code-preview">
+        <div class="card uh-tab">
+            <nav class="uh-tab-nav">
+                <a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
+            </nav>
+        </div>
+        <pre class="code-snippet display-on" id="html"><code>&lt;div class="row center-xs">
     &lt;div class="col-xs-6">
         &lt;div class="box">
             start
         &lt;/div>
     &lt;/div>
 &lt;/div>
-</code></pre>
+        </code></pre>
+    </section>
     <h4><code>.end-</code></h4>
     <div class="row">
         <div class="col-xs-12">
@@ -369,14 +385,22 @@
                 </div>
             </div>
         </div>
-    </div><pre class="code-snippet display-on" id="html"><code>&lt;div class="row end-xs">
+    </div>
+    <section class="code-preview">
+        <div class="card uh-tab">
+            <nav class="uh-tab-nav">
+                <a  class="nav-item nav-fit-content active" href="#html" id="html-tab">HTML</a>
+            </nav>
+        </div>
+        <pre class="code-snippet display-on" id="html"><code>&lt;div class="row end-xs">
     &lt;div class="col-xs-6">
         &lt;div class="box">
             end
         &lt;/div>
     &lt;/div>
 &lt;/div>
-</code></pre>
+        </code></pre>
+    </section>
     <p>Here is an example of using the modifiers in conjunction to acheive different alignment at different viewport sizes.</p>
     <div class="row">
         <div class="col-xs-12">
