--- a/urbanstory/pages/forms/form.html
+++ b/urbanstory/pages/forms/form.html
@@ -11,6 +11,16 @@
             <label>Text label</label>
             <input type="text" name="" placeholder="Text input">
         </div>
+        <div class="input-form">
+            <label>Text label</label>
+            <label>Put some description messages here</label>
+            <input type="text" name="" placeholder="Text input">
+        </div>
+        <div class="input-form">
+            <label>Text label</label>
+            <input type="text" name="" placeholder="Text input">
+            <label>Counter message</label>
+        </div>
         <div class="input-form is-warning">
             <label>Text label</label>
             <input type="text" name="" placeholder="Text input">
