--- a/urbanstory/pages/guidelines/blog.html
+++ b/urbanstory/pages/guidelines/blog.html
@@ -1,2 +1,2 @@
-<iframe src="https://cldup.com/sd-w7dQmav.pdf" style="width:100%; height:100vh;" frameborder="0"></iframe>
+<iframe src="files/uh-docs-for-blogs.pdf" style="width:100%; height:100vh;" frameborder="0"></iframe>
 
