--- a/urbanstory/pages/forms/form.html
+++ b/urbanstory/pages/forms/form.html
@@ -3,40 +3,40 @@
         <h1>Input</h1>
     </section>
     <section>
-        <div class="input-form width-auto">
+        <div class="uh-input-form width-auto">
             <label>Text label</label>
             <input type="text" name="" placeholder="Text input">
         </div>
-        <div class="input-form">
+        <div class="uh-input-form">
             <label>Text label</label>
             <input type="text" name="" placeholder="Text input">
         </div>
-        <div class="input-form">
+        <div class="uh-input-form">
             <label>Text label</label>
             <label>Put some description messages here</label>
             <input type="text" name="" placeholder="Text input">
         </div>
-        <div class="input-form">
+        <div class="uh-input-form">
             <label>Text label</label>
             <input type="text" name="" placeholder="Text input">
             <label>Counter message</label>
         </div>
-        <div class="input-form is-warning">
+        <div class="uh-input-form is-warning">
             <label>Text label</label>
             <input type="text" name="" placeholder="Text input">
             <label>Warning message</label>
         </div>
-        <div class="input-form is-danger">
+        <div class="uh-input-form is-danger">
             <label>Text label</label>
             <input type="text" name="" placeholder="Text input">
             <label>Danger message</label>
         </div>
-        <div class="input-form is-info">
+        <div class="uh-input-form is-info">
             <label>Text label</label>
             <input type="text" name="" placeholder="Text input">
             <label>Info message</label>
         </div>
-        <div class="input-form is-success">
+        <div class="uh-input-form is-success">
             <label>Text label</label>
             <input type="text" name="" placeholder="Text input">
             <label>Success message</label>
@@ -48,170 +48,178 @@
                     <a  class="nav-item nav-fit-content" href="#sass" id="sass-tab">SASS</a>
                 </nav>
             </div>
-            <pre class="code-snippet" id="html"><code>&lt;div class=&quot;input-form width-auto&quot;&gt;
+<pre class="code-snippet" id="html"><code>&lt;div class=&quot;uh-input-form width-auto&quot;&gt;
     &lt;label&gt;Text label&lt;/label&gt;
     &lt;input type=&quot;text&quot; name=&quot;&quot; placeholder=&quot;Text input&quot;&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;input-form&quot;&gt;
+&lt;div class=&quot;uh-input-form&quot;&gt;
     &lt;label&gt;Text label&lt;/label&gt;
     &lt;input type=&quot;text&quot; name=&quot;&quot; placeholder=&quot;Text input&quot;&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;input-form is-warning&quot;&gt;
+&lt;div class=&quot;uh-input-form is-warning&quot;&gt;
     &lt;label&gt;Text label&lt;/label&gt;
     &lt;input type=&quot;text&quot; name=&quot;&quot; placeholder=&quot;Text input&quot;&gt;
     &lt;label&gt;Warning message&lt;/label&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;input-form is-danger&quot;&gt;
+&lt;div class=&quot;uh-input-form is-danger&quot;&gt;
     &lt;label&gt;Text label&lt;/label&gt;
     &lt;input type=&quot;text&quot; name=&quot;&quot; placeholder=&quot;Text input&quot;&gt;
     &lt;label&gt;Danger message&lt;/label&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;input-form is-info&quot;&gt;
+&lt;div class=&quot;uh-input-form is-info&quot;&gt;
     &lt;label&gt;Text label&lt;/label&gt;
     &lt;input type=&quot;text&quot; name=&quot;&quot; placeholder=&quot;Text input&quot;&gt;
     &lt;label&gt;Info message&lt;/label&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;input-form is-success&quot;&gt;
+&lt;div class=&quot;uh-input-form is-success&quot;&gt;
     &lt;label&gt;Text label&lt;/label&gt;
     &lt;input type=&quot;text&quot; name=&quot;&quot; placeholder=&quot;Text input&quot;&gt;
     &lt;label&gt;Success message&lt;/label&gt;
 &lt;/div&gt;</code></pre>
-            <pre class="code-snippet display-off" id="sass"><code>
-// forms
-textarea,
-input[type="text"],
-input[type="password"],
-input[type="email"],
-input[type="search"],
-select {
-    @extend .transition;
-    outline: none;
-    border: solid 1px $c-grey-3;
-    line-height: 40px;
-    font-size: 14px;
-    padding: 0 $gutter-m;
-    // background:;
-    @include radius;
-    &:focus {
-        @include box-shadow(0 0 0 3px rgba(black, 0.15));
+<pre class="code-snippet display-off" id="sass"><code>// forms
+    .uh-input-form {
+        textarea,
+        input[type=&quot;text&quot;],
+        input[type=&quot;password&quot;],
+        input[type=&quot;email&quot;],
+        input[type=&quot;search&quot;],
+        select {
+            @extend .transition;
+            outline: none;
+            border: solid 1px $c-grey-3;
+            line-height: 40px;
+            font-size: 14px;
+            padding: 0 $gutter-m;
+            // background:;
+            @include radius;
+            &amp;:focus {
+                @include box-shadow(0 0 0 3px rgba(black, 0.15));
+            }
+            &amp;[disabled] {
+                border: solid 1px $c-grey-2;
+                cursor: not-allowed;
+            }
+        }
+        select {
+            height: 40px;
+            width: 100%;
+            background: white;
+        }
     }
-    &[disabled] {
-        border: solid 1px $c-grey-2;
-        cursor: not-allowed;
-    }
-}
-
-select {
-    height: 40px;
-    width: 100%;
-    background: white;
-}
-
-.input-form {
-    label:first-of-type {
-        display: block;
-        font-size: (14/16) + rem;
-        margin-bottom: $gutter-m;
-        margin-top: $gutter-l;
-    }
-    &.width-auto {
+    
+    .uh-input-form {
+        label:first-of-type {
+            display: block;
+            font-size: (14/16) + rem;
+            margin-bottom: $gutter-m;
+            margin-top: $gutter-l;
+        }
+        &amp;.width-auto {
+            textarea,
+            input,
+            select {
+                width: auto;
+            }
+        }
+        textarea {
+            resize: vertical;
+            overflow: auto;
+            line-height: 1rem;
+            padding: $gutter-m;
+            min-height: 64px;
+        }
+        label {
+            &amp; + label {
+                display: block;
+                color: $c-grey-4;
+                font-size: (12/16) + rem;
+                margin-top: -($gutter-s);
+                margin-bottom: $gutter-s + 1;
+            }
+        }
         textarea,
         input,
         select {
-            width: auto;
+            width: 100%;
+            &amp; + label {
+                display: block;
+                color: $c-grey-4;
+                font-size: (12/16) + rem;
+                margin-top: $gutter-s;
+            }
         }
-    }
-    textarea {
-        resize: vertical;
-        overflow: auto;
-        line-height: 1rem;
-        padding: $gutter-m;
-        min-height: 64px;
-    }
-    textarea,
-    input,
-    select {
-        width: 100%;
-        &+label {
-            display: block;
-            color: $c-grey-4;
-            font-size: (12/16) + rem;
-            margin-top: $gutter-s;
+        &amp;.is-danger {
+            label {
+                color: $c-red-1;
+            }
+            select,
+            textarea,
+            input[type=&quot;text&quot;],
+            input[type=&quot;password&quot;],
+            input[type=&quot;email&quot;],
+            input[type=&quot;search&quot;] {
+                border: solid 1px $c-red-1;
+                &amp;:focus {
+                    @include box-shadow(0 0 0 3px rgba($c-red-1, 0.15));
+                }
+            }
         }
-    }
-    &.is-danger {
-        label {
-            color: $c-red-1;
+        &amp;.is-warning {
+            label {
+                color: $c-yellow-1;
+            }
+            select,
+            textarea,
+            input[type=&quot;text&quot;],
+            input[type=&quot;password&quot;],
+            input[type=&quot;email&quot;],
+            input[type=&quot;search&quot;] {
+                border: solid 1px $c-yellow-1;
+                &amp;:focus {
+                    @include box-shadow(0 0 0 3px rgba($c-yellow-1, 0.15));
+                }
+            }
         }
-        select,
-        textarea,
-        input[type="text"],
-        input[type="password"],
-        input[type="email"],
-        input[type="search"] {
-            border: solid 1px $c-red-1;
-            &:focus {
-                @include box-shadow(0 0 0 3px rgba($c-red-1, 0.15));
+        &amp;.is-success {
+            label {
+                color: $c-green-1;
+            }
+            select,
+            textarea,
+            input[type=&quot;text&quot;],
+            input[type=&quot;password&quot;],
+            input[type=&quot;email&quot;],
+            input[type=&quot;search&quot;] {
+                border: solid 1px $c-green-1;
+                &amp;:focus {
+                    @include box-shadow(0 0 0 3px rgba($c-green-1, 0.15));
+                }
+            }
+        }
+        &amp;.is-info {
+            label {
+                color: $c-median-1;
+            }
+            select,
+            textarea,
+            input[type=&quot;text&quot;],
+            input[type=&quot;password&quot;],
+            input[type=&quot;email&quot;],
+            input[type=&quot;search&quot;] {
+                border: solid 1px $c-median-1;
+                &amp;:focus {
+                    @include box-shadow(0 0 0 3px rgba($c-median-1, 0.15));
+                }
             }
         }
     }
-    &.is-warning {
-        label {
-            color: $c-yellow-1;
-        }
-        select,
-        textarea,
-        input[type="text"],
-        input[type="password"],
-        input[type="email"],
-        input[type="search"] {
-            border: solid 1px $c-yellow-1;
-            &:focus {
-                @include box-shadow(0 0 0 3px rgba($c-yellow-1, 0.15));
-            }
-        }
-    }
-    &.is-success {
-        label {
-            color: $c-green-1;
-        }
-        select,
-        textarea,
-        input[type="text"],
-        input[type="password"],
-        input[type="email"],
-        input[type="search"] {
-            border: solid 1px $c-green-1;
-            &:focus {
-                @include box-shadow(0 0 0 3px rgba($c-green-1, 0.15));
-            }
-        }
-    }
-    &.is-info {
-        label {
-            color: $c-median-1;
-        }
-        select,
-        textarea,
-        input[type="text"],
-        input[type="password"],
-        input[type="email"],
-        input[type="search"] {
-            border: solid 1px $c-median-1;
-            &:focus {
-                @include box-shadow(0 0 0 3px rgba($c-median-1, 0.15));
-            }
-        }
-    }
-}
-
-// checkbox & radio
-            </code></pre>
+    
+    // checkbox &amp; radio</code></pre>
         </section>
     </section>
 </div>
