--- a/urbanstory/pages/forms/select.html
+++ b/urbanstory/pages/forms/select.html
@@ -4,7 +4,7 @@
 	</section>
 	<section>
 		<h4>Full Witdh (Default)</h4>
-		<div class="input-form">
+		<div class="uh-input-form">
 			<select>
 				<option>Option 1</option>
 				<option>Option 2</option>
@@ -31,134 +31,7 @@
 &lt;/div&gt;</code></pre>
 			<pre class="code-snippet display-off" id="sass-1"><code>
 // forms
-textarea,
-input[type="text"],
-input[type="password"],
-input[type="email"],
-input[type="search"],
-select {
-	@extend .transition;
-	outline: none;
-	border: solid 1px $c-grey-3;
-	line-height: 40px;
-	font-size: 14px;
-	padding: 0 $gutter-m;
-	// background:;
-	@include radius;
-	&:focus {
-		@include box-shadow(0 0 0 3px rgba(black, 0.15));
-	}
-	&[disabled] {
-		border: solid 1px $c-grey-2;
-		cursor: not-allowed;
-	}
-}
-
-select {
-	height: 40px;
-	width: 100%;
-	background: white;
-}
-
-.input-form {
-	label:first-of-type {
-		display: block;
-		font-size: (14/16) + rem;
-		margin-bottom: $gutter-m;
-		margin-top: $gutter-l;
-	}
-	&.width-auto {
-		textarea,
-		input,
-		select {
-			width: auto;
-		}
-	}
-	textarea {
-		resize: vertical;
-		overflow: auto;
-		line-height: 1rem;
-		padding: $gutter-m;
-		min-height: 64px;
-	}
-	textarea,
-	input,
-	select {
-		width: 100%;
-		&+label {
-			display: block;
-			color: $c-grey-4;
-			font-size: (12/16) + rem;
-			margin-top: $gutter-s;
-		}
-	}
-	&.is-danger {
-		label {
-			color: $c-red-1;
-		}
-		select,
-		textarea,
-		input[type="text"],
-		input[type="password"],
-		input[type="email"],
-		input[type="search"] {
-			border: solid 1px $c-red-1;
-			&:focus {
-				@include box-shadow(0 0 0 3px rgba($c-red-1, 0.15));
-			}
-		}
-	}
-	&.is-warning {
-		label {
-			color: $c-yellow-1;
-		}
-		select,
-		textarea,
-		input[type="text"],
-		input[type="password"],
-		input[type="email"],
-		input[type="search"] {
-			border: solid 1px $c-yellow-1;
-			&:focus {
-				@include box-shadow(0 0 0 3px rgba($c-yellow-1, 0.15));
-			}
-		}
-	}
-	&.is-success {
-		label {
-			color: $c-green-1;
-		}
-		select,
-		textarea,
-		input[type="text"],
-		input[type="password"],
-		input[type="email"],
-		input[type="search"] {
-			border: solid 1px $c-green-1;
-			&:focus {
-				@include box-shadow(0 0 0 3px rgba($c-green-1, 0.15));
-			}
-		}
-	}
-	&.is-info {
-		label {
-			color: $c-median-1;
-		}
-		select,
-		textarea,
-		input[type="text"],
-		input[type="password"],
-		input[type="email"],
-		input[type="search"] {
-			border: solid 1px $c-median-1;
-			&:focus {
-				@include box-shadow(0 0 0 3px rgba($c-median-1, 0.15));
-			}
-		}
-	}
-}
-
-// checkbox & radio
+same as at form page
 			</code></pre>
 		</section>
 	</section>
