--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		if(accessToken === "true"){
 			return true;
 		}else{
-			let password = window.prompt('Input password?', encrypt(''))
+			let password = window.prompt('Input password?', '')
 			if(password === '' || password === null){
 				location.reload();
 			}else{
