--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			return "";
 	}
 	function getAuth($password){
-		if($password === 'UhUiUx115'){
+		if($password === 'uiux'){
 			setCookie("login", true, 1)
 		}else{
 			return loginPage()
