--- a/urbanstory/pages/cards/searchbar.html
+++ b/urbanstory/pages/cards/searchbar.html
@@ -6,7 +6,7 @@
 		<div class="card flex search-bar">
 			<input type="text" placeholder="Search 2.801 employee...">
 			<div class="dropdown padd-l">All Departments <i class="icon-caret-down"></i></div>
-			<button class="btn btn-large btn-firm">SEARCH</button>
+			<button class="uh-btn uh-btn-large uh-btn-firm">SEARCH</button>
 		</div>
 		<section class="code-preview has-tab">
 			<div class="card uh-tab">
@@ -18,7 +18,7 @@
 			<pre class="code-snippet" id="html"><code>&lt;div class=&quot;card flex search-bar&quot;&gt;
 	&lt;input type=&quot;text&quot; placeholder=&quot;Search 2.801 employee...&quot;&gt;
 	&lt;div class=&quot;dropdown padd-l&quot;&gt;All Departments &lt;i class=&quot;icon-caret-down&quot;&gt;&lt;/i&gt;&lt;/div&gt;
-	&lt;button class=&quot;btn btn-large btn-firm&quot;&gt;SEARCH&lt;/button&gt;
+	&lt;button class=&quot;uh-btn uh-btn-large uh-btn-firm&quot;&gt;SEARCH&lt;/button&gt;
 &lt;/div&gt;</code></pre>
 			<pre class="code-snippet display-off" id="sass"><code>
 .flex {
