--- a/urbanstory/pages/collaterals/corporate.html
+++ b/urbanstory/pages/collaterals/corporate.html
@@ -5,10 +5,10 @@
                 <h1>Corporate</h1>
             </div>
             <div class="col-xs-12 col-md-6 end-md">
-                <a class="btn btn-large btn-firm"
+                <a class="uh-btn uh-btn-large uh-btn-firm"
                     href="https://github.com/urbanhire/urbanhire.github.io/blob/master/urbanstory/src/img/corporate/presentation_template_corporate.pptx?raw=true"
                     target="_blank">Download PPT template</a>&nbsp;
-                <a class="btn btn-large btn-success"
+                <a class="uh-btn uh-btn-large uh-btn-success"
                     href="https://github.com/urbanhire/urbanhire.github.io/blob/master/urbanstory/src/img/corporate/corporate.zip?raw=true"
                     target="_blank">Download images</a>
             </div>
