--- a/urbanstory/pages/collaterals/jobseeker.html
+++ b/urbanstory/pages/collaterals/jobseeker.html
@@ -5,10 +5,10 @@
                 <h1>Job Seeker</h1>
             </div>
             <div class="col-xs-12 col-md-6 end-md">
-                <a class="btn btn-large btn-firm"
+                <a class="uh-btn uh-btn-large uh-btn-firm"
                     href="https://github.com/urbanhire/urbanhire.github.io/blob/master/urbanstory/src/img/jobseeker/presentation_template__job_seeker.pptx?raw=true"
                     target="_blank">Download PPT template</a>&nbsp;
-                <a class="btn btn-large btn-success"
+                <a class="uh-btn uh-btn-large uh-btn-success"
                     href="https://github.com/urbanhire/urbanhire.github.io/blob/master/urbanstory/src/img/jobseeker/jobseeker.zip?raw=true"
                     target="_blank">Download images</a>
             </div>
